# wazepolice

./: .gitignore  README.md  police_1744605513.json  police_1744605531.json  pyproject.toml  requirements.txt  wazepolice.py
schema/: wazedata.json
